# qoriq-perf

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
qoriq-common/: Makefile.am  Makefile.in  ccsr_bman_v1.h  ccsr_ddr_v1.h  ccsr_fman_v1.h  ccsr_qman_v1.h  common.h  dcsr_corenet_v1.h  dcsr_cpu_v1.h  dcsr_ddr_v1.h  dcsr_dpaa_v1.h  dcsr_dpaa_v2.h  dcsr_epu_v1.h  dcsr_epu_v2.h  dcsr_nal_v1.h  dcsr_npc_v1.h  dcsr_npc_v2.h  dcsr_nxc_v1.h  dcsr_ocn_v1.h  dcsr_rcpm_v1.h  pmr_cpu_v1.h
qoriq-common/test/: Makefile.am  Makefile.in  gen_testmasks  utest.c
qoriq-perf/: Makefile.am  Makefile.in
qoriq-perf/Documentation/: AboutQoriQPerf.txt
qoriq-perf/Utils/id_generator/: ddrc_gen_id.py  ddrc_gen_lib.py  display_ids.py
qoriq-perf/module/: Makefile.in  epu_events.c  epu_events.h  qoriq_cntrs.c  qoriq_cntrs.h  qoriq_counters.h  qoriq_counters_chained.c  qoriq_counters_simple.c  qoriq_event_config.c  qoriq_event_config.h  qoriq_hitgen_config.c  qoriq_hitgen_config.h  qoriq_perf.c  qoriq_perf.h  qoriq_pmu.c  qoriq_pmu.h
qoriq-perf/module/arch/: Makefile.in
qoriq-perf/module/arch/B4860/: corenet_events.c  corenet_events.h  ddr_events.c  epu_counters.c  epu_counters.h  npc_events.h  qoriq_raw_events.c  qoriq_raw_events.h
qoriq-perf/module/arch/E500/: ddr_cmplx_events.c  ddr_cmplx_events.h  ddr_events.c  ddr_events.h  dpaa_events.c  dpaa_events.h  epu_counters.c  epu_counters.h  npc_events.c  qoriq_raw_events.c  qoriq_raw_events.h
