#
# Copyright (C) 2010, 2011, 2012 Freescale Semiconductor, Inc.
# All rights reserved.
#
# This software may be distributed under the terms of the
# GNU General Public License ("GPL") as published by the Free Software
# Foundation, either version 2 of that License or (at your option) any
# later version.
#
# THIS SOFTWARE IS PROVIDED BY Freescale Semiconductor ``AS IS'' AND ANY
# EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL Freescale Semiconductor BE LIABLE FOR ANY
# DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
# THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#

PROCESSOR=@PROCESSOR@

SUBDIRS= \
	module

EXTRA_DIST = \
        module/Makefile.in \
        module/arch/B4860/corenet_events.c \
        module/arch/B4860/corenet_events.h \
        module/arch/B4860/ddr_events.c \
        module/arch/B4860/ddr_events.h \
        module/arch/B4860/dpaa_events.c \
        module/arch/B4860/dpaa_events.h \
        module/arch/B4860/epu_counters.c \
        module/arch/B4860/epu_counters.h \
        module/arch/B4860/npc_events.c \
        module/arch/B4860/npc_events.h \
        module/arch/B4860/qoriq_raw_events.h \
        module/arch/B4860/ddr_cmplx_events.c \
        module/arch/B4860/ddr_cmplx_events.h \
	module/arch/B4860/qoriq_raw_events.c \
        module/arch/E500/corenet_events.c \
        module/arch/E500/corenet_events.h \
        module/arch/E500/ddr_events.c \
        module/arch/E500/ddr_events.h \
        module/arch/E500/dpaa_events.c \
        module/arch/E500/dpaa_events.h \
        module/arch/E500/epu_counters.c \
        module/arch/E500/epu_counters.h \
        module/arch/E500/npc_events.c \
        module/arch/E500/npc_events.h \
        module/arch/E500/qoriq_raw_events.h \
        module/arch/E500/ddr_cmplx_events.c \
        module/arch/E500/ddr_cmplx_events.h \
	module/arch/E500/qoriq_raw_events.c \
	module/qoriq_counters.h \
        module/epu_events.c \
        module/epu_events.h \
        module/qoriq_cntrs.c \
        module/qoriq_cntrs.h \
        module/qoriq_event_config.c \
        module/qoriq_event_config.h \
        module/qoriq_perf.c \
        module/qoriq_perf.h \
        module/qoriq_pmu.h \
        module/qoriq_hitgen_config.c \
        module/qoriq_hitgen_config.h \
	module/qoriq_counters_chained.c \
	module/qoriq_counters_simple.c \
        module/qoriq_pmu.c \
	Documentation/AboutQoriQPerf.txt \
	Documentation/PerfEventList.pdf \
	Utils/id_generator/ddrc_gen_id.py \
	Utils/id_generator/ddrc_gen_lib.py \
	Utils/id_generator/display_ids.py

